call to action spacing fix?

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ a {
 .call {
     display: flex;
     max-width: 1000px;
-    margin: 40px 20%;
+    margin: 40px 25%;
     justify-content: space-around;
     align-items: center;
     background-color: #3882F6;
